# misanthropic

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  COPYRIGHT  Cargo.toml  Dockerfile  LICENSE  README.md  coverage.sh  justfile
.claude/skills/misan-messages-api/: BASH.md  MEMORY.md  SKILL.md  TEXT_EDITOR.md
.claude/skills/misan-streaming-api/: SKILL.md
.github/workflows/: release.yaml  tests.yaml
bashd/: Cargo.toml
bashd/src/: main.rs  server.rs  session.rs  tls.rs
chat/: Cargo.toml  README.md
chat/backend/: Cargo.toml  README.md
chat/backend/.shuttle/: config.toml
chat/backend/src/: endpoints.rs  main.rs  prompt.rs  state.rs
chat/backend/src/prompt/: default.json
chat/frontend/: .gitignore  CONTRIBUTORS  Cargo.toml  README.md  input.css  package-lock.json  tailwind.config.js
chat/frontend/assets/: tailwind.css
chat/frontend/assets/styling/: blog.css  chat.css  main.css  navbar.css
chat/frontend/src/: client.rs  main.rs  utils.rs
chat/frontend/src/components/: hero.rs  navbar.rs
chat/frontend/src/views/: chat.rs  mod.rs
chat/model/: Cargo.toml
chat/model/src/: lib.rs  request.rs  response.rs  toolbox.rs
chat/src/: endpoints.rs  main.rs  prompt.rs
examples/: neologism.rs  python.rs  python_system.md  strawberry.rs  website_wizard.rs  website_wizard_output.md  website_wizard_prompt.txt
examples/chat/: Cargo.toml
examples/chat/src/: endpoints.rs  main.rs
examples/chat/src/prompt/: default.json
hooks/: pre-commit
misanthropic/: COPYRIGHT  Cargo.toml  README.md
misanthropic-derive/: Cargo.toml
misanthropic-derive/src/: lib.rs  tool.rs  tool_args.rs  util.rs
misanthropic/examples/: README.md  bash.rs  bash_background.rs  batch_haiku.rs  code_execution.rs  few_shot_triage.rs  interleaved_thinking.rs  memory.rs  memory_palace_agent_test.rs  mid_conversation_system.rs  neologism.rs  programmatic_tool_calling.rs  prompt_caching.rs  python.rs  reminder.rs  strawberry.rs  structured_commit_classifier.rs  swarm.rs  text_editor.rs  tool_search.rs  triage_stream.rs  vote_intent.rs  web_fetch.rs  web_search.rs  website_wizard.rs  website_wizard_prompt.txt
misanthropic/examples/utils/: args.rs  chat.rs  key.rs  mod.rs
misanthropic/src/: batch.rs  chat.rs  client.rs  cot.rs  dioxus.rs  html.rs  key.rs  lib.rs  markdown.rs  model.rs  openai.rs  prompt.rs  response.rs  skills.rs  stream.rs  tests.rs  tool.rs  transport.rs  utils.rs
misanthropic/src/key/: encrypted.rs  unencrypted.rs
misanthropic/src/prompt/: cached.rs  citation.rs  index.rs  message.rs  output.rs  thinking.rs
misanthropic/src/response/: message.rs
misanthropic/src/tests/: wire_coverage.rs
misanthropic/src/tool/: bash.rs  butler.rs  embedding.rs  fs.rs  mailbox.rs  memory.rs  memory_palace.rs  memory_palace_tests.rs  memory_subroutine.rs  notepad.rs  text_editor.rs  toolbox.rs  typed.rs
misanthropic/src/tool/bash/: docker.rs  pki.rs  rich.rs
misanthropic/src/tool/memory_palace/: db.rs  error.rs  m_use.rs  mod.rs  models.rs  queries.rs  render.rs  service.rs  subroutine.rs  tool.rs
misanthropic/src/tool/memory_palace/models/: path.rs
misanthropic/src/tool/memory_subroutine/: archivist.rs  db.rs  handle.rs  navigator.rs  prompts.rs  tasks.rs  wanderer.rs
misanthropic/test/data/: README.md  capture.sh  redacted_thought.sse.stream.jsonl  sse.stream.txt  system_after_server_tool.response.json  system_after_server_tool.sse.stream.jsonl  text.sse.stream.jsonl  thinking.sse.stream.txt
misanthropic/test/data/incremental/: structured_items.sse.stream.jsonl  tool_items.sse.stream.jsonl
misanthropic/test/data/requests/: code_execution.json  incremental_structured.json  incremental_tool.json  pause_turn.json  ptc.json  system_after_server_tool.json  text.json  tool_search.json  web_fetch.json  web_search.json
misanthropic/test/data/server_tools/: bash_code_execution_file_output.json  bash_code_execution_result.json  code_execution.sse.stream.jsonl  code_execution_result.json  code_execution_result.sse.stream.jsonl  memory_tool_use.json  pause_turn.sse.stream.jsonl  pause_turn_resume.sse.stream.jsonl  ptc.sse.stream.jsonl  ptc_resume.sse.stream.jsonl  ptc_tool_use.json  server_tool_use.json  text_editor_code_execution_create_result.json  text_editor_code_execution_error.json  text_editor_code_execution_str_replace_result.json  text_editor_code_execution_view_result.json  tool_reference.json  tool_search.sse.stream.jsonl  tool_search_error.json  tool_search_result.json  web_fetch.sse.stream.jsonl  web_fetch_error.json  web_fetch_pdf.json  web_fetch_result.json  web_search.sse.stream.jsonl  web_search_error.json  web_search_result.json
misanthropic/tests/: derive_tool_args.rs  tool_attr.rs  ui.rs
misanthropic/tests/ui/: method_wrong_arity.rs  method_wrong_arity.stderr  unknown_tool_key.rs  unknown_tool_key.stderr
skills/: misanthropic-message.md  misanthropic-streaming.md
src/: client.rs  cot.rs  html.rs  key.rs  key_memsecurity.rs  lib.rs  markdown.rs  model.rs  prompt.rs  request.rs  response.rs  stream.rs  tool.rs
src/key/: encrypted.rs  unencrypted.rs
src/prompt/: message.rs
src/request/: message.rs
src/response/: message.rs
test/data/: sse.stream.txt
