[workspace]
resolver = "2"
members = [
    "misanthropic",
    "misanthropic-derive",
    "chat/backend",
    "chat/frontend",
    "chat/model",
    "bashd",
]

# Shared package metadata. Members opt in per-field with `version.workspace =
# true` etc., so the version lives in exactly one place.
[workspace.package]
version = "1.0.0-alpha.6"
edition = "2024"
authors = ["Michael de Gans <michael.john.degans@gmail.com>"]
homepage = "https://github.com/mdegans/misanthropic"
repository = "https://github.com/mdegans/misanthropic"
license = "MIT"

[workspace.lints]
rust.unsafe_code = "forbid"
rust.missing_docs = "deny"

# Shared dependency declarations. The inter-crate version/path is defined once
# here; members use `misanthropic-derive = { workspace = true }`.
[workspace.dependencies]
misanthropic-derive = { version = "1.0.0-alpha.6", path = "misanthropic-derive" }

[profile.release]
lto = true
strip = true
# There are (hopefully) no panics in this library. If there are, they are bugs.
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
