[package]
name = "misanthropic-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
shuttle-axum = "0.51.0"
shuttle-runtime = "0.51.0"
tokio = "1.28.2"
misanthropic = { path = "../misanthropic", features = ["shuttle", "log"] }
futures = "0.3"
async-stream = "0.3"
serde_json = "1"
lazy_static = "1"
tokio-stream = "0.1"
