[package]
name = "misanthropic"
version = "1.0.0-alpha.1"
edition = "2024"
authors = ["Michael de Gans <michael.john.degans@gmail.com>"]
description = "An async, ergonomic, client for Anthropic's Messages API"
homepage = "https://github.com/mdegans/misanthropic"
repository = "https://github.com/mdegans/misanthropic"
readme = "README.md"
keywords = ["anthropic", "messages", "client", "async", "stream"]
categories = [
    "api-bindings",
    "asynchronous",
    "network-programming",
    "text-processing",
    "web-programming::http-client",
]
license = "MIT"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
# For base64 encoding/decoding, obvs.
base64 = "0.22"
# Because I don't like boilerplate.
derive_more = { version = "1", features = [
    "as_ref",
    "deref",
    "display",
    "from",
    "into",
    "is_variant",
] }
# For the client
eventsource-stream = "0.2"
# We don't depend on tokio. Misanthropic should support anything that `rewqest`
# supports, howevet the Client will not build on wasm32 currently.
futures = "0.3"
# For various traits like `Tool` 
async-trait = "0.1"
# For `image` crate support.
image = { version = "0.25", optional = true }
# For logging
log = { version = "0.4", optional = true }
# For paranoid people who want to encrypt the key in memory. I have no idea how
# secure this is, but it would make malware that searches for keys in memory
# harder to write. This is a mitigation for an already bad situation.
memsecurity = { version = "3.5", optional = true }
# For zeroizing keys in memory.
zeroize = { version = "1", features = ["derive"] }
# rustls because I am sick of getting Dependabot alerts for OpenSSL.
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "http2",
], default-features = false, optional = true }
# Because of a strange issue wiht reqwest::Url missing Deserialize
url = { version = "2", features = ["serde"] }
# What else would we use? Ok there are options, but this is a good one.
serde = { version = "1", features = ["derive"] }
# In some places in this crate, we use `serde_json::Value` to represent JSON
# objects.
serde_json = "1"
# I like this for errors.
thiserror = "1"
# markdown support
pulldown-cmark = { version = "0.12", optional = true, features = ["serde"] }
# Html rendering of markdown. `dioxus` feature is better for this, but it is
# available for those who want it.
pulldown-cmark-to-cmark = { version = "19", optional = true }
# To enforce certain guarantees at compile time.
static_assertions = "1"
# For output sanitization. Currently this is not supported for `Block::thought`
# because character escaping could break Anthropic's signature, and the API
# would reject the message when resubmitting. The developer is responsible for
# ensuring the output is sanitized. Or simply hide agent thoughts. Log them
# instead. Users only need see "thinking" unless you really, really want to
# expose customers to the random thoughts of a machine learning model.
langsan = { version = "0", features = [
    "english",
    "french",
    "german",
    "italian",
    "serde",
    "emoji",
    "verbose",
], optional = true }
# For HTML escaping
xml-rs = { version = "0.8", optional = true }
# For shuttle-runtime support
shuttle-runtime = { version = "0.51", optional = true }
# Rate limiting
governor = { version = "0.7", optional = true }
# async/await
async-stream = "0.3"
# for date and time parsing
chrono = { version = "0.4", features = ["serde"] }
# for request ids
uuid = { version = "1", features = ["v4", "serde"] }
# Dioxus support
dioxus = { version = "0.6", optional = true }
# For the `MemoryPalace` tool.
sqlx = { version = "0.8", features = ["chrono"], optional = true }
# Atomic enum for various things like tool state.
atomic_enum = { version = "0.3.0", optional = true }
# Timer for futures
futures-timer = { version = "3", optional = true }
# For tokio support in some tools
tokio = { version = "1", optional = true }

[dev-dependencies]
# for all examples
clap = { version = "4", features = ["derive"] }
# for all examples
env_logger = "0.11"
# The async runtime. `misanthropic` itself is async runtime agnostic. Except
# wasm. Wasm is a special snowflake.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# for the strawberry example
itertools = "0.13"
# for the python example
subprocess = "0.2"
tempfile = "3.12"

[features]
# rustls because I am sick of getting Dependabot alerts for OpenSSL.
default = ["rustls-tls", "langsan", "rate-limiting", "client", "batch"]
# Image crate support. Note that images are supported without this feature but
# you must handle encoding/decoding yourself, so it almost always makes sense
# to enable this and use the image crate.
image = ["dep:image"]
# A beta has been enabled. It is not necessary to set this manually. Only one
# beta can be enabled at a time (for example, `prompt-caching`).
beta = []
# Use the image crate to support JPEG images.
jpeg = ["image", "image/jpeg"]
# Use the image crate to support PNG images.
png = ["image", "image/png"]
# Use the image crate to support GIF images.
gif = ["image", "image/gif"]
# Use the image crate to support WEBP images.
webp = ["image", "image/webp"]
# Enable prompt caching (recommended, however limits model choices)
prompt-caching = ["beta"]
# Enable logging
log = ["dep:log"]
# Use rustls instead of the system SSL, such as OpenSSL.
rustls-tls = ["reqwest/rustls-tls"]
# Use `pulldown-cmark` for markdown parsing and `pulldown-cmark-to-cmark` for
# converting to CommonMark.
markdown = ["pulldown-cmark/serde", "dep:pulldown-cmark-to-cmark"]
# Utilities for converting prompts and messages to HTML. Enables `markdown`.
html = ["markdown", "xml-rs"]
# Derive PartialEq for all structs and enums.
partial-eq = []
# Input and output sanitization
langsan = ["dep:langsan"]
# Encrypted key in memory. Without this the key is still zeroed on drop, but is
# not encrypted. This is a more secure option for the paranoid. Does not build
# on wasm32.
memsecurity = ["dep:memsecurity"]
# Enable client-side rate limiting. This is enabled by default.
rate-limiting = ["dep:governor"]
# Support for parsing chain of thought XML tags.
cot = []
# Support for shuttle-runtime crate.
shuttle = ["dep:shuttle-runtime"]
# Batch support. By default this is on but it breaks wasm, FYI.
batch = ["client"]
# Enable the actual client. This can be off for wasm because eventsource-stream
# requires Sync on some things and that's not possible in wasm.
client = ["dep:reqwest"]
# Enables some Dioxus support. This is not necessary for the client.
dioxus = ["dep:dioxus"]
# Notepad tool for the assistant to take notes.
notepad = []
# MemoryPalace tool for the assistant to store and retrieve memories.
memory-palace = ["sqlx/postgres", "sqlx/chrono", "sqlx", "embedding"]
# MemorySubroutine agent. Uses the MemoryPalace for a primary agent.
memory-subroutine = [
    "batch",
    "dep:atomic_enum",
    "dep:futures-timer",
    "memory-palace",
    "prompt-caching",
    "sqlx/uuid",
]
# Sqlx support (need for some tools)
sqlx = ["dep:sqlx"]
# Tokio for sqlx support
tokio-sqlx = ["sqlx/runtime-tokio-rustls"]
# Feature for testing with in-memory database
kv-mem = []
# Tokio support. This is necessary for tokio support in a few tools.
tokio = ["dep:tokio"]
# Embedding support for the `misanthropic` crate. This is used by various tools.
embedding = ["dep:reqwest"]


[[example]]
name = "strawberry"
required-features = ["client", "markdown"]
doc-scrape-examples = true

[[example]]
name = "python"
required-features = ["client", "markdown", "prompt-caching"]
doc-scrape-examples = true

[[example]]
name = "website_wizard"
required-features = ["client"]
doc-scrape-examples = true

[[example]]
name = "neologism"
required-features = ["client"]
doc-scrape-examples = true

# See also the `chat` example in the root of the repository.
